--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="nav">
+    <div class="nav-1">
       <div class="container">
         <ul class="pull-left">
           <li><a href="#">Main</a></li>
