--- a/Index.html
+++ b/Index.html
@@ -39,23 +39,23 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="http://goo.gl/0sX3jq">
+                        <img src="http://lorempixel.com/400/200/city/1">
                     </div>
                     <div class="thumbnail">
-                        <img src="http://goo.gl/an2HXY">
+                        <img src="http://lorempixel.com/400/200/city/2">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="http://goo.gl/Av1pac">
+                        <img src="http://lorempixel.com/400/200/city/3">
                     </div>
                     <div class="thumbnail">
-                        <img src="http://goo.gl/vw43v1">
+                        <img src="http://lorempixel.com/400/200/city/4">
                     </div>   
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail">
-                        <img src="http://goo.gl/0Kd7UO">
+                        <img src="http://lorempixel.com/400/200/city/5">
                     </div>
                 </div>
             </div>
